# solar_farm

./: .gitignore  Add_cloud_cover.ipynb  Adding_features.ipynb  Formatting_address.py  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled3.ipynb  Webapp.ipynb  adding_geocode_precipitation.py  cleaning_features.py  final_checks.ipynb  final_tables.py  main.py  map_test.py  prec_jan.ipynb  prep_precipititation.ipynb  pyproject.toml  slider.py  solar_project.ipynb  solar_project_main.ipynb
config/: model.yml  sources.yml
src/solar_suitability/: __init__.py  build.py  cli.py  config.py  distance.py  download.py  geo.py  pipeline.py  scoring.py
src/solar_suitability/app/: streamlit_app.py
tests/: test_app_smoke.py  test_build_sample.py  test_config.py  test_distance.py  test_doctor.py  test_geo_smoke.py  test_pipeline.py  test_real_build.py  test_scoring.py
