[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-suitability"
version = "0.1.0"
description = "Reproducible mainland Portugal utility-scale solar farm suitability model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "plotly>=5.18",
  "pyarrow>=14",
  "PyYAML>=6.0",
  "requests>=2.31",
  "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
geo = [
  "geopandas>=0.14",
  "pyproj>=3.6",
  "rasterio>=1.3",
  "shapely>=2.0",
]
all = [
  "pytest>=8.0",
  "geopandas>=0.14",
  "pyproj>=3.6",
  "rasterio>=1.3",
  "shapely>=2.0",
]

[project.scripts]
solar-suitability = "solar_suitability.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
